wine_cellar/assets/css/forms.css
.pure-form input[aria-invalid='true'] {
  border-color: var(--red);
}

.login-container {
  margin: 0 auto;
  padding: 20px;
  background-color: var(--light);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);

  .pure-form input[type='text'],
  .pure-form input[type='password'] {
    width: 100%;
    margin-bottom: 10px;
  }
}

.filter-legend {
  padding-right: 20px;
}

.form-subhead {
  font-size: var(--font-lg);
  margin: 20px 0 10px 0;
  font-weight: 300;
  color: #333;
}

.wine-form {
  input,
  select,
  textarea,
  .ts-wrapper {
    min-width: 100%;
    min-height: 40px;
  }

  /* needed to ensure inner tomselect input does not default to new line */
  .ts-control input:not([type='checkbox']) {
    min-width: revert;
  }

  label {
    margin-bottom: 0px;
    line-height: 0.75rem;
  }

  @media screen and (min-width: 48em) {
    .pure-control-group {
      display: flex;

      input,
      select {
        flex-grow: 1;
      }
    }
  }
}

.form-container {
  margin-bottom: 1rem;
}

p.form-hint {
  font-style: italic;
  color: var(--text-color-gray);
  margin: 0.25rem 0;
}

.ts-wrapper {
  margin-top: 0.25rem;
}

.ts-control {
  height: 36px;
}

.form-errorlist {
  margin-top: 0;
  color: #bb0000;
  font-weight: bold;
  padding-left: 1rem;
}

.filter-form--lg,
.filter-form {
  input:not([type='checkbox']),
  select,
  .ts-wrapper
  .ts-control {
    width: calc(100% - 20px);
    min-height: 40px;
  }
}

/* responsive styling for large and small filters */
.filter-form--lg {
  display: none;
}

.filter-form__sm-container {
  details > summary {
    list-style: none;
  }
 
  summary::-webkit-details-marker {
    display: none
  }
 
  summary::before {
    content: '  +';
    font-size: 27px;
    font-weight: 400;
    vertical-align: baseline;
  }

  details[open] summary:before { 
    content: "  –";
    font-size: 27px;
    font-weight: 400;
    vertical-align: top;
  }

  .filter-form__header {
    font-size: var(--font-md);
    font-weight: 300;
    display: inline;
  }
}

@media screen and (min-width: 35.5em) {
  .filter-form--lg {
      display: block;
  }
  .filter-form__sm-container {
      display: none;
  }
}

.form__scanner {
  width: 100%;
  padding-top: 100%; /* 1:1 Aspect Ratio */
  position: relative;

  video {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
  }
}

